--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,7 @@ apply plugin: 'project-report'
 apply plugin: 'war'
 
 ext {
+    springFrameworkVersion = '3.2.4.RELEASE'
     groovyVersion = '2.1.7'
     hamcrestVersion = '1.3'
     junitVersion = '4.11'
@@ -56,6 +57,8 @@ dependencies {
     compile "org.slf4j:jcl-over-slf4j:${slf4jVersion}"
     compile "ch.qos.logback:logback-core:${logbackVersion}"
     compile "ch.qos.logback:logback-classic:${logbackVersion}"
+    compile "org.springframework:spring-webmvc:${springFrameworkVersion}"
+    compile "org.springframework:spring-web:${springFrameworkVersion}"
 
     runtime "org.slf4j:jul-to-slf4j:${slf4jVersion}"
     runtime "org.slf4j:log4j-over-slf4j:${slf4jVersion}"
